# workgraph

./: .gitignore  BUG_REPORT_NESTING.md  BUG_REPORT_STACKED_DAEMONS.md  CLAUDE.md  Cargo.toml  FORK.md  LICENSE  README.md
.claude/skills/: wg.md
docs/: ADR-actor-vs-agent-identity.md  AGENCY.md  AGENT-GUIDE.md  AGENT-SERVICE.md  BUG-dead-agent-stalls-coordinator.md  COMMANDS.md  ERIK-BRIEF.md  IDENTITY.md  NIKETE-BRIEF.md  README.md  REVIEW-SYNTHESIS.md  VAUGHN-RETURN-BRIEF.md  cycle-support-audit.md  design-cyclic-workgraph.md  human-summoning-research.md  survey-context-management.md  tui-design.md  whitepaper.typ
docs/design/: agency-federation.md  doc-sync-system.md  loop-convergence.md  provenance-system.md  trace-functions.md
docs/manual/: 01-overview.typ  02-task-graph.typ  03-agency.typ  03-identity.typ  04-coordination.typ  05-evolution.typ  PLAN.md  README.md  workgraph-manual.typ
docs/poetry/: workgraph-poems.typ
docs/research/: amplifier-architecture.md  amplifier-context-transfer.md  amplifier-executor-gap.md  amplifier-integration-proposal.md  amplifier-integration-proposal.md.typ  collaborators-and-perspectives.md  cyclic-processes.md  file-locking-audit.md  gepa-integration.md  logging-gaps.md  logging-veracity-gap-analysis.md  nikete-fork-deep-review.md  nikete-logging-review.md  organizational-economics-review.md  organizational-patterns-wrapper.typ  organizational-patterns.md  organizational-patterns.typ  veracity-exchange-deep-dive.md  (+1 more)
scripts/: wg-daemon.sh
src/: agency.rs  check.rs  config.rs  federation.rs  gepa.rs  graph.rs  identity.rs  lib.rs  main.rs  models.rs  parser.rs  query.rs  runs.rs  test_helpers.rs  trace_function.rs  usage.rs
tests/: evaluation_recording.rs  integration_agency.rs  integration_agency_edge_cases.rs  integration_agency_federation.rs  integration_agency_lineage.rs  integration_auto_assignment.rs  integration_check_context.rs  integration_cli_workflows.rs  integration_error_paths.rs  integration_fork_features.rs  integration_global_config.rs  integration_identity.rs  integration_identity_edge_cases.rs  integration_loop_workflow.rs  integration_loops.rs  integration_replay_exhaustive.rs  integration_review_workflow.rs  integration_runs_exhaustive.rs  integration_service.rs  integration_service_coordinator.rs  integration_trace_exhaustive.rs  integration_trace_functions.rs  integration_trace_replay.rs  reward_recording.rs  skill_resolution.rs
(+129 files in other folders)
