[package]
name = "workgraph"
version = "0.1.0"
edition = "2024"
description = "A lightweight work coordination graph for humans and AI agents"
license = "MIT"

[[bin]]
name = "wg"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
libc = "0.2"
dirs = "5.0"
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
