[package]
name = "workgraph"
version = "0.1.0"
edition = "2024"
description = "A lightweight work coordination graph for humans and AI agents"
license = "MIT"
repository = "https://github.com/erikg/workgraph"
homepage = "https://github.com/erikg/workgraph"

[[bin]]
name = "wg"
path = "src/main.rs"

[features]
default = ["matrix-lite"]
matrix = ["dep:matrix-sdk", "dep:futures-util"]
matrix-lite = ["dep:reqwest", "dep:urlencoding"]
llm-tests = []  # gates tests that call Claude CLI
test-support = []  # exposes test helpers for cross-crate use

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
ratatui = "0.29"
crossterm = "0.28"
ascii-dag = "0.8"
zstd = "0.13"
dialoguer = "0.11"
walkdir = "2"

# Optional Matrix integration (requires sqlite3)
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite"], optional = true }
futures-util = { version = "0.3", optional = true }

# Lightweight Matrix integration (just HTTP, no E2EE/sqlite)
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
urlencoding = { version = "2.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3"
workgraph = { path = ".", features = ["test-support"] }
